# OOCL.Image.Client/swagger.json
@@ -932,59 +932,29 @@
       }
     },
     "/api/Image/create-gif": {
-      "get": {
+      "post": {
         "tags": [
           "Image"
         ],
-        "parameters": [
-          {
-            "name": "ids",
-            "in": "query",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string",
-                "format": "uuid"
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateGifRequest"
               }
-            }
-          },
-          {
-            "name": "dtos",
-            "in": "query",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/components/schemas/ImageObjDto"
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateGifRequest"
               }
-            }
-          },
-          {
-            "name": "frameRate",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 10
-            }
-          },
-          {
-            "name": "rescale",
-            "in": "query",
-            "schema": {
-              "type": "number",
-              "format": "double",
-              "default": 1
-            }
-          },
-          {
-            "name": "doLoop",
-            "in": "query",
-            "schema": {
-              "type": "boolean",
-              "default": false
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateGifRequest"
+              }
             }
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "OK",
@@ -1011,26 +981,6 @@
           },
           "400": {
             "description": "Bad Request",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not Found",
             "content": {
               "text/plain": {
                 "schema": {
@@ -1867,6 +1817,38 @@
   },
   "components": {
     "schemas": {
+      "CreateGifRequest": {
+        "type": "object",
+        "properties": {
+          "ids": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "nullable": true
+          },
+          "dtos": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ImageObjDto"
+            },
+            "nullable": true
+          },
+          "frameRate": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "rescale": {
+            "type": "number",
+            "format": "double"
+          },
+          "doLoop": {
+            "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
       "CreateImageRequest": {
         "type": "object",
         "properties": {
